# camera2geo

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: main.yml  qgis_plugin.yml  release.yml
camera2geo/: __init__.py  cli.py  main.py  metadata.py  prep.py  search.py  sensors.csv
camera2geo/utils/: config.py  create_geotiffs.py  elevation.py  fov.py  geospatial.py  geospatial_conversions.py  imagedrone.py  io.py  metadata.py  new_fov.py  raster_utils.py
docs/examples/: example_python.py  python.py
docs/examples/data_mavic2pro/input/: metadata.csv
images/: icon.afdesign
qgis_camera2geo/: Makefile  README.html  README.txt  __init__.py  camera2geo.py  camera2geo_dialog.py  camera2geo_dialog_base.ui  camera2geo_plugin.py  camera2geo_processing_algorithm.py  metadata.txt  pb_tool.cfg  provider.py  resources.qrc
qgis_camera2geo/help/source/: index.rst
src/: __init__.py  create_geotiffs.py  imagedrone.py  main.py  meta_data.py  new_fov.py  search_cameras.py
src/utils/: __init__.py  config.py  geospatial_conversions.py  imagedrone.py  logger_config.py  new_elevation.py  raster_utils.py  utils.py
