[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { include = ["src*"] } }

[project]
name = "camera2geo"
version = "1.0.0"
description = "Camera to geographic space image convertion"
readme = "README.md"
license = {text = "AGPL"}
authors = [
    {name = "Kanoa Lindiwe", email = "cankanoa@gmail.com"}
]
maintainers = [
    {name = "Joseph Emile Honour Percival", email = "ipercival@gmail.com"}
]
keywords = ['remote sensing', 'georeferencing', 'camera projection', 'coordinate transformation', 'geographic information systems(gis)', 'QGIS plugin', 'uas/drone', 'geospatial', 'image processing', 'environmental monitoring']
requires-python = ">=3.9, <3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent"
]

dependencies = [
    "vmem~=1.0.2",
    "setuptools~=71.0.4",
    "rasterio~=1.3.9",

    "numpy>=1.26.3; python_version >= '3.12'",
    "numpy>=1.24.0,<1.25.0; python_version < '3.12'",
    "pyproj>=3.6.0; python_version >= '3.12'",
    "pyproj>=3.5.0,<3.6.0; python_version < '3.12'",

    "geojson~=3.1.0",
    "argparse~=1.4.0",
    "utm~=0.7.0",
    "geojson_rewind",
    "shapely~=2.0.2",
    "geometry",
    "geopy~=2.4.1",
    "pyexiftool",
    "pillow~=10.3.0",
    "gps-time",
    "datetime~=5.4",
    "vector3d~=1.1.1",
    "scikit-image>=0.20.0,<0.24.0",
    "wheel~=0.43.0",
    "pandas",
    "opencv-python~=4.9.0.80",
    "geopandas",
    "magnetic_field_calculator~=1.0.2",
    "magnetismi~=2022.10.9",
    "mpmath~=1.3.0",
    "tqdm~=4.66.2",
    "sympy~=1.9.0",
    "lensfunpy~=1.15.0",
    "numpy-quaternion~=2023.0.3",
    "rio_cogeo~=5.3.0",
    "asyncio",
    "websocket-client",
    "fire>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "pre-commit>=4.1.0",
    "build",
]

[project.urls]
"Bug Tracker" = "https://github.com/cankanoa/camera2geo/issues"
"Source" = "https://github.com/cankanoa/camera2geo"

[project.scripts]
spectralmatch = "spectralmatch.cli:main"